try add PWA install button

--- a/SComputers/style.css
+++ b/SComputers/style.css
@@ -59,12 +59,32 @@ li {
     transition: background-color 0.15s;
 }
 
+@keyframes redpulse {
+    0% {
+        background-color: #cb3636;
+    }
+    25% {
+        background-color: #cb3636;
+    }
+    50% {
+        background-color: #e57070;
+    }
+    75% {
+        background-color: #cb3636;
+    }
+    100% {
+        background-color: #cb3636;
+    }
+}
+
 .red {
     background-color: #cb3636;
+    animation: redpulse 3s infinite;
 }
 
 .red:hover {
     background-color: #e57070;
+    animation: none;
 }
 
 .green {
@@ -97,4 +117,12 @@ li {
 
 .yellow:hover {
     background-color: #f4cb63;
+}
+
+.purple {
+    background-color: #a820da;
+}
+
+.purple:hover {
+    background-color: #bb5edd;
 }
