--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 body {
     background: hsl(0, 0%, 12%);
     font-family: 'Roboto', sans-serif;
-    margin: 20px
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 .image {
@@ -20,10 +23,185 @@ body {
     list-style-type: disc;
 }
 
+h1 {
+    color: rgb(255, 255, 255);
+}
+
+h2 {
+    color: rgb(255, 255, 255);
+}
+
+h3 {
+    color: rgb(255, 255, 255);
+}
+
+p {
+    color: rgb(255, 255, 255);
+}
+
 .hyper {
     color: rgb(255, 123, 0)
 }
 
 li {
     margin: 20px 0;
+}
+
+.image-button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+.image-button img {
+    width: 50px;
+    height: auto;
+}
+
+.cool-text {
+    background-color: #5d5d5d;
+    color: white;
+    border: none;
+    padding: 20px 20px;
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 20px 20px;
+    border-radius: 5px;
+}
+
+.cool-frame {
+    background-color: #a3a3a3;
+    color: white;
+    border: none;
+    padding: 20px 20px;
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 20px 20px;
+    border-radius: 5px;
+}
+
+.cool-block {
+    background-color: #a3a3a3;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+    height: 60px;
+    padding: 10px;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+}
+
+.cool-button {
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.15s;
+}
+
+@keyframes redpulse {
+    0% {
+        background-color: #cb3636;
+    }
+    25% {
+        background-color: #cb3636;
+    }
+    50% {
+        background-color: #e57070;
+    }
+    75% {
+        background-color: #cb3636;
+    }
+    100% {
+        background-color: #cb3636;
+    }
+}
+
+.red {
+    background-color: #cb3636;
+    animation: redpulse 3s infinite;
+}
+
+.red:hover {
+    background-color: #e57070;
+    animation: none;
+}
+
+.green {
+    background-color: #36cb3b;
+}
+
+.green:hover {
+    background-color: #84dc87;
+}
+
+.brown {
+    background-color: #c36225;
+}
+
+.brown:hover {
+    background-color: #f19459;
+}
+
+.blue {
+    background-color: #368dcb;
+}
+
+.blue:hover {
+    background-color: #7dc0f0;
+}
+
+.yellow {
+    background-color: #daa620;
+}
+
+.yellow:hover {
+    background-color: #f4cb63;
+}
+
+.purple {
+    background-color: #a820da;
+}
+
+.purple:hover {
+    background-color: #bb5edd;
+}
+
+.gray {
+    background-color: #757575;
+}
+
+.gray:hover {
+    background-color: #c5c5c5;
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    background: #383838;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #626262;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #888;
 }
