--- a/SComputers/style3.css
+++ b/SComputers/style3.css
@@ -70,7 +70,8 @@ li {
     display: inline-block;
     font-size: 16px;
     margin: 20px 20px;
-    border-radius: 5px;
+    border-radius: 10px;
+    position: relative;
 }
 
 .cool-frame {
@@ -83,7 +84,7 @@ li {
     display: inline-block;
     font-size: 16px;
     margin: 20px 20px;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 
 .cool-block {
