--- a/logichub/styles/button.css
+++ b/logichub/styles/button.css
@@ -1,7 +1,8 @@
 .button {
     background-color: rgba(0, 191, 249, 0.552);
     
-    font-size: 30px;
+    font-size: 20px;
+    text-shadow: 0px 0px 5px rgb(0, 0, 0);
     text-align: center;
     color: white;
 
