--- a/logichub/styles/main.css
+++ b/logichub/styles/main.css
@@ -8,11 +8,12 @@
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
-    padding: 0;
 
-    padding-top: var(--content-margin);
+    padding-top: calc(var(--content-margin) + var(--titlebar-height));
     padding-left: var(--content-margin);
     padding-right: var(--content-margin);
+    padding-bottom: 0;
+
     box-sizing: border-box;
 
     background-image: url('../backgrounds/background.png');
@@ -45,7 +46,7 @@ a {
 }
 
 .box-shadow {
-    box-shadow: 0px 0px 5px 1px rgb(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 5px 1px rgb(0, 0, 0, 0.6);
 }
 
 .circle {
