--- a/logichub/styles/content.css
+++ b/logichub/styles/content.css
@@ -8,6 +8,8 @@
 }
 
 .content-part {
+    position: relative;
+
     box-sizing: border-box;
     padding: var(--content-padding);
     margin-bottom: var(--content-margin);
@@ -37,6 +39,16 @@
     font-size: 50px;
     text-align: center;
     color: white;
+}
+
+.content-mini-title {
+    position: absolute;
+    color: white;
+
+    font-size: 20px;
+    
+    top: 20px;
+    left: 20px;
 }
 
 .content-preview-scroll {
