--- a/logichub/styles/main.css
+++ b/logichub/styles/main.css
@@ -16,7 +16,7 @@ body {
 
     box-sizing: border-box;
 
-    background-image: url('../backgrounds/background.png');
+    background-image: url('../backgrounds/background2.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
