--- a/logichub/styles/category.css
+++ b/logichub/styles/category.css
@@ -18,6 +18,8 @@
 .category-selector-button {
     background-color: rgba(255, 255, 255, 0.4);
 
+    cursor: pointer;
+
     display: flex;
     justify-content: center;
     align-items: center;
